<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/auth_screen_background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/auth_padding_horizontal_large"
        android:paddingTop="@dimen/auth_padding_top_registration"
        android:paddingEnd="@dimen/auth_padding_horizontal_large"
        android:paddingBottom="@dimen/auth_padding_bottom">

        <TextView
            style="@style/auth_text_registration_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_registration_title" />

        <TextView
            style="@style/auth_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/auth_margin_label_top_large"
            android:text="@string/auth_email_label" />

        <EditText
            android:id="@+id/repeatPasswordEditText"
            style="@style/auth_edit_text_large"
            android:layout_width="match_parent"
            android:layout_height="@dimen/auth_input_height_large"
            android:layout_marginTop="@dimen/auth_margin_field_top"
            android:backgroundTint="@null"
            android:hint="@string/auth_repeat_password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/emailEditText"
            style="@style/auth_edit_text_large"
            android:layout_width="match_parent"
            android:layout_height="@dimen/auth_input_height_large"
            android:layout_marginTop="@dimen/auth_margin_field_top"
            android:backgroundTint="@null"
            android:hint="@string/auth_email_hint"
            android:inputType="textEmailAddress" />

        <TextView
            style="@style/auth_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/auth_margin_label_top_medium"
            android:text="@string/auth_password_label" />

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/auth_edit_text_large"
            android:layout_width="match_parent"
            android:layout_height="@dimen/auth_input_height_large"
            android:layout_marginTop="@dimen/auth_margin_field_top"
            android:backgroundTint="@null"
            android:hint="@string/auth_password_hint"
            android:inputType="textPassword" />

        <TextView
            style="@style/auth_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/auth_margin_label_top_medium"
            android:text="@string/auth_repeat_password_label" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registrationButton"
            style="@style/auth_button_primary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/auth_button_height_small"
            android:layout_marginTop="@dimen/auth_margin_button_top"
            android:enabled="false"
            android:text="@string/auth_registration_button" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/auth_margin_switch_auth_top"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/auth_text_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_has_account"
                android:textColor="@color/auth_text_primary" />

            <TextView
                style="@style/auth_text_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/auth_text_spacing_small"
                android:text="@string/auth_login_link"
                android:textColor="@color/auth_green" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/auth_divider_height"
            android:layout_marginTop="@dimen/auth_margin_divider_top_medium"
            android:background="@color/auth_registration_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/auth_margin_social_top"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/vkButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/auth_social_button_height_large"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/auth_social_spacing_medium"
                android:background="@drawable/bg_auth_vk_button"
                android:backgroundTint="@null"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/auth_vk_text"
                android:textAllCaps="false"
                android:textColor="@color/auth_text_white"
                android:textSize="@dimen/auth_text_size_social" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/okButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/auth_social_button_height_large"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/auth_social_spacing_medium"
                android:background="@drawable/bg_auth_ok_button"
                android:backgroundTint="@null"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/auth_ok_text"
                android:textAllCaps="false"
                android:textColor="@color/auth_text_white"
                android:textSize="@dimen/auth_text_size_social" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>